# course_work

./: .gitignore  ActivationMethods.h  CMakeLists.txt  Convolutional.cpp  Convolutional.h  FullyConnected.cpp  FullyConnected.h  LICENSE  Layer.cpp  Layer.h  Network.cpp  Network.h  README.md  main.cpp  mnist_example.cpp  mnist_with_opencv.cpp  xor_example.cpp
Network_lib/: CMakeLists.txt
Network_lib/headers/: ActivationMethods.h  Convolutional.h  FullyConnected.h  Layer.h  Network.h
Network_lib/source/: Convolutional.cpp  FullyConnected.cpp  Layer.cpp  Network.cpp
docs/html/: _activation_methods_8h.html  _activation_methods_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _convolutional_8cpp.html  _convolutional_8h.html  _convolutional_8h_source.html  _formulas.tex  _fully_connected_8cpp.html  _fully_connected_8h.html  _fully_connected_8h_source.html  _layer_8cpp.html  _layer_8h.html  _layer_8h.js  _layer_8h_source.html  _network_8cpp.html  _network_8h.html  _network_8h_source.html  _r_e_a_d_m_e_8md.html  affine_8hpp.html  affine_8hpp_source.html  all__indices_8h.html  all__indices_8h_source.html  all__layers_8hpp.html  all__layers_8hpp_source.html  allocator_8h.html  allocator_8h_source.html  allocator__stats_8hpp.html  allocator__stats_8hpp_source.html  allocator__stats_8impl_8hpp.html  allocator__stats_8impl_8hpp.js  allocator__stats_8impl_8hpp_source.html  annotated.html  annotated_dup.js  any_8h.html  any_8h_source.html  any_8hpp.html  any_8hpp.js  any_8hpp_source.html  assert_8hpp.html  (+3948 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_16.js  all_17.html  all_17.js  all_18.html  all_18.js  all_19.html  all_19.js  all_1a.html  all_1a.js  all_1b.html  all_1b.js  all_1c.html  all_1c.js  all_1d.html  all_1d.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  (+491 more)
eigen/build_dir/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Eigen3.sln  Eigen3Targets.cmake  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildtests.sh  buildtests.vcxproj  buildtests.vcxproj.filters  cdashtesting.cmake  check.vcxproj  check.vcxproj.filters  cmake_install.cmake  package-lock.json  package.json  uninstall.vcxproj  uninstall.vcxproj.filters
eigen/build_dir/Eigen/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
eigen/build_dir/blas/: ALL_BUILD.vcxproj  CTestTestfile.cmake  EigenBlas.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  blas.vcxproj  blas.vcxproj.filters  cmake_install.cmake  eigen_blas.vcxproj  eigen_blas_static.vcxproj  eigen_blas_static.vcxproj.filters
eigen/build_dir/demos/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  EigenDemos.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  demos.vcxproj
eigen/build_dir/doc/: ALL_BUILD.vcxproj  Doxyfile  Doxyfile-unsupported  (+14 more)
examples/: mnist_example.cpp  mnist_with_opencv.cpp  xor_example.cpp
weights/: trained_weights.txt
(+1848 files in other folders)
